[package]
name = "alice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
libc = "0.2"
unicode-segmentation = "1.10.1"
tree-sitter = "0.20.10"
tree-sitter-highlight = "0.20.1"
tree-sitter-rust = "0.20.4"

[build-dependencies]
cc="*"

[lints.clippy]
use_self = "warn"
