[package]
name = "alice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
libc = "0.2"
unicode-segmentation = "1.10.1"
tree-sitter = "0.22.5"
tree-sitter-highlight = "0.22.5"
tree-sitter-rust = "0.21.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

[build-dependencies]
cc="*"

[lints.clippy]
use_self = "warn"
